--- a/dsygonline/WebRoot/css/style.css
+++ b/dsygonline/WebRoot/css/style.css
@@ -25,6 +25,7 @@ img{ vertical-align:middle; border:none;}
 .products table,.products_info table{ margin:0 auto;}
 .product{ width:100%; height:55px; background:url(../images/btn.png) no-repeat; opcacity:1; text-align:center; padding:5px 0; color:#ffffff; font-size:16px; cursor:pointer; font-family:"微软雅黑";}
 .product_cur{ background:url(../images/btn_cur.png) no-repeat;}
+.product_h3{ height:20px; line-height:20px; padding-left:10px; margin-top:110px; font-size:14px; font-family:"宋体"; font-weight:bold;}
 .arial{ font-family:Arial, Helvetica, sans-serif;}
 .product:hover{ opacity:0.9;}
 .products table{ margin-top:10px;}
