--- a/dsygonline/WebRoot/css/style.css
+++ b/dsygonline/WebRoot/css/style.css
@@ -290,3 +290,6 @@ h1.ttl{color:#2074bd; font-size:30px; font-family:"微软雅黑"; font-weight:no
 .caseBox2{width: 300px;float: left;margin: 0px 5px 0px;}
 .caseBox2 h2{border-bottom: medium none;border-left: medium none;padding-bottom: 0px;margin: 20px 0px 0px 0px;padding-left: 0px;padding-right: 0px;border-top: medium none;border-right: medium none;padding-top: 0px;}
 .fBox_tittle p{ margin:0; padding:0; line-height:30px; font-size:16px; text-indent:2em; color:#333333; font-family:"微软雅黑";}
+
+.black_overlay{display: none;position: absolute;top: 0%;left: 0%;width: 100%;height: 100%;background-color: #000;z-index:1001;opacity:0.5;
+filter: alpha(opacity=50);}
