--- a/dsygonline/WebRoot/css/style.css
+++ b/dsygonline/WebRoot/css/style.css
@@ -293,3 +293,23 @@ h1.ttl{color:#2074bd; font-size:30px; font-family:"微软雅黑"; font-weight:no
 
 .black_overlay{display: none;position: absolute;top: 0%;left: 0%;width: 100%;height: 100%;background-color: #000;z-index:1001;opacity:0.5;
 filter: alpha(opacity=50);}
+.login_div {display: none;position: absolute;z-index:1002; height: auto; width: auto; top: 200px; left: 590px; background-color: #fff; font-family:"微软雅黑"; font-size:15px;}
+.login_header {
+	border: 1px solid #0080ff;
+	background: #0080ff url("../images/button.png") 50% 50% repeat-x;
+	color: #ffffff;
+	font-weight: bold;
+	text-align:center;
+	height: 30px;
+	line-height:30px; 
+	cursor: move;
+}
+.delete_icon {
+	width: 16px;
+	height: 16px;
+	background: url("../images/delete.png") no-repeat;
+	float:right;
+	margin-top:8px;
+	margin-right:5px;
+}
+.login_dialog{ padding:10px;}
