--- a/dsygonline/WebRoot/css/style.css
+++ b/dsygonline/WebRoot/css/style.css
@@ -295,9 +295,9 @@ h1.ttl{color:#2074bd; font-size:30px; font-family:"微软雅黑"; font-weight:no
 filter: alpha(opacity=50);}
 .login_div {display: none;position: absolute;z-index:1002; height: auto; width: auto; top: 200px; left: 590px; background-color: #fff; font-family:"微软雅黑"; font-size:15px;}
 .login_header {
-	border: 1px solid #0080ff;
-	background: #0080ff url("../images/button.png") 50% 50% repeat-x;
-	color: #ffffff;
+	border: 0px solid #0080ff;
+	background: #0080ff url("../images/list_bg.jpg") 50% 50% repeat-x;
+	color: #2785d6;
 	font-weight: bold;
 	text-align:center;
 	height: 30px;
